# BugHunter-AI

backend/: .env.development  inspect_memory.py  pyproject.toml  test_workflow.py
backend/app/: main.py
backend/app/agents/: memory_logic.py  state.py  workflow.py
backend/app/api/: routes.py  webhook.py
backend/app/core/: cognee_config.py  config.py
backend/app/scripts/: seed_bugs.py
backend/app/services/: github.py
