[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cognee>=1.2.2",
    "fastapi>=0.138.2",
    "fastembed>=0.8.0",
    "google-genai>=2.10.0",
    "groq>=1.5.0",
    "langgraph>=1.2.7",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "tree-sitter>=0.26.0",
    "uvicorn>=0.49.0",
]
